# utilsCore

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README.zh-CN.md  api_wiki.md  mount.md  rk3568-toolchain.cmake  rk356x-toolchain.cmake  toolchain.cmake
docs/: net-rewrite.md  performance_callback_hotspots.md  performance_followup_recommendations.md
docs/logs/: logger_design.md  logging_migration_guide.md  logging_system_summary.md
docs/plans/: 2026-02-22-net-rewrite-design.md  2026-03-09-p0-static-callback-hotspots-verification.md  2026-03-09-project-performance-audit.md  2026-03-14-loggerv2-low-overhead.md  2026-03-14-mpp-stability-plan.md  2026-03-21-camera-perf-design.md  2026-03-21-camera-perf-implementation.md
examples/: CMakeLists.txt  CpuMonitor.h  CsvWriter.h  DIF_RES_CAP.cpp  EGui.cpp  EGui.h  EGuiNoRGA.cpp  GL_CV_DRAW_test.cpp  LatencyStats.h  OpenGL_test.cpp  RGA_CV_DRAW_test.cpp  SS_AS_AM1_AM3_test.cpp  SnowflakeTest.cpp  app.cpp  captureTest.cpp  encoderTest.h  fbshow.h  log.txt  logger_config_demo.cpp  logger_v2_demo.cpp  net_demo.json  net_demo_plugin.cpp  opencv_impl.h  pipelineTest.cpp  rga_dmabuf_demo.cpp  rga_impl.h  rknn_test.cpp  snowflakeTest.cpp  static_callback_compile_demo.cpp  tcpServer_example.cpp  threadpool_scale_demo.cpp  uiTest.cpp  utils_test.cpp  visionTest.cpp
examples/camera_perf/: CMakeLists.txt  README.md  camera_capture_perf.cpp  plot_camera_perf.py  run_camera_perf_matrix.py
examples/old/: EGui.h  EGuiNoRGA.cpp  app_bk.cpp
examples/www/: index.html  sample.txt
examples/www/assets/css/: styles.css
examples/www/assets/data/: status.json
examples/www/assets/js/: app.js
include/UI/: myapplication.h  myopenglwiget.h  qMouseWatch.h  videocapturethread.h
include/UI/ConfigInterface/: maininterface.h  offerScreenWidget.h
include/UI/MMAP/: imageWindow.h  mainwg.h  myopenglwidget.h  paramdialog.h  playthread.h
include/UI/rander/: core.h  draw.h
include/model/: fileUtils.h  m_types.h  postprocess.h  preprocess.h  rknnPool.h  yolov5.h  yolov5s.h
include/model/res/: build-linux.sh
include/pipeline/: appController.h  displayManager.h  recordPipeline.h  uiRenderer.h  visionPipeline.h  yoloProcessor.h
include/utils/: asyncThreadPool.h  dma_bpp.h  errorinfo.h  fdWrapper.h  fenceWatcher.h  fixedSizePool.h  getCaptureNode.h  logger.h  logger_config.h  logger_v2.h  noDestroySingleton.h  objectsPool.h  orderedQueue.h  progressBar.h  rkapis.h  rkmedia_s.h  safeQueue.h  sharedBufferState.h  simpleVariant.h  threadPauser.h  threadUtils.h  types.h  udevMonitor.h
include/utils/dma/: dmaBuffer.h
include/utils/drm/: deviceController.h  drmBpp.h  drmLayer.h  dtsi_path.md  framebufferCache.h  planesCompositor.h
include/utils/internal/: callbackTraits.h  staticCallback.h
include/utils/mouse/: watcher.h
include/utils/mpp/: encoderContext.h  encoderCore.h  encoderPool.h  fileTools.h  formatTool.h  jpegEncoder.h  mppResourceGuard.h  streamWriter.h
include/utils/net/: config.h  configuredServer.h  http.h  json.h  line.h  plugin.h  response.h  server.h
include/utils/rga/: formatTool.h  rga2drm.h  rgaConverter.h  rgaProcessor.h
include/utils/sys/: base.h  cpuMonitor.h  memoryMonitor.h
include/utils/v4l2/: cameraController.h  camera_controller.h  formatTool.h  frame.h  v4l2Exception.h  v4l2_exception.h
include/utils/v4l2param/: paramControl.h  paramLogger.h  paramProcessor.h
include/v4l2_capture/: v4l2_video.h
src/UI/: CMakeLists.txt  myapplication.cpp  myopenglwiget.cpp  videocapturethread.cpp
src/UI/ConfigInterface/: maininterface.cpp  offerScreenWidget.cpp
src/UI/MMAP/: imageWindow.cpp  mainwg.cpp  myopenglwidget.cpp  paramdialog.cpp  playthread.cpp
src/UI/rander/: core.cpp  draw.cpp
src/UI/uis/: maininterface.ui  mainwg.ui  myapplication.ui
src/UI/uis/res/: res.qrc  texture.frag  texture.vert
src/model/: CMakeLists.txt  build-linux.sh  fileUtils.cpp  postprocess.cpp  preprocess.cpp  yolov5.cpp  yolov5s.cpp
src/pipeline/: CMakeLists.txt  appController.cpp  displayManager.cpp  recordPipeline.cpp  uiRenderer.cpp  visionPipeline.cpp  yoloProcessor.cpp
src/utils/: CMakeLists.txt  asyncThreadPool.cpp  getCaptureNode.cpp  logger.cpp  logger_config.cpp  logger_v2.cpp  rkapis.cpp  rkmedia_s.cpp  threadPauser.cpp  udevMonitor.cpp
src/utils/dma/: dmaBuffer.cpp
src/utils/drm/: deviceController.cpp  drmLayer.cpp  framebufferCache.cpp  planesCompositor.cpp
src/utils/mouse/: watcher.cpp
src/utils/mpp/: encoderContext.cpp  encoderCore.cpp  jpegEncoder.cpp  streamWriter.cpp
src/utils/net/: config.cpp  configuredServer.cpp  http.cpp  json.cpp  plugin.cpp  server.cpp
src/utils/rga/: rgaConverter.cpp  rgaProcessor.cpp
src/utils/v4l2/: cameraController.cpp  camera_controller.cpp  frame.cpp
src/utils/v4l2param/: paramControl.cpp  paramLogger.cpp  paramProcessor.cpp
src/v4l2_capture/: CMakeLists.txt  v4l2_video.cpp
